# homelab

./: .bazelrc  .gitattributes  BUILD  MODULE.bazel  README.md  bazel-bin  bazel-homelab  bazel-out  bazel-testlogs  multitool.lock.json
docs/: server_setup.md
flux/cluster/: apps.yaml  gotk-sync.yaml
src/netplan_templates/: 01-static-ip.tpl.yaml
tools/: flux  kubectl
