module(
    name = "homelab",
    version = "0.0",
)

# Hermetic executables
bazel_dep(name = "rules_multitool", version = "1.11.1")
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")
